--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -51,7 +51,7 @@ barchartGC(~infected + treatment,data=women, type="percent")
 
 ```
 
-
+The bar chart shows that, among women who contracted aids, most of them received treatment, therefore the treatment appears to not be effective in preventing aids.
 
 ### Numerical Descriptive Results
 
@@ -63,7 +63,7 @@ rowPerc(table1)
 colPerc(table1)
 ```
 
-
+The numerical shows that, among the women who got aids, 58.82% received the treatment.
 
 ## Inferential Results
 
@@ -75,8 +75,11 @@ chisqtestGC(table1)
 fisher.test(table1)
 ```
 
-
+The p-value is .000007686, which is lower than 0.05, therefore we reject the null hypothesis. 
+The odds show that if you are a woman and you take the treatment, you are 1.54 times more likely to contract aids.
 
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+
+With this data, we can come to the conclusion that the preventative aids drug, triUmpsal, does not appear to be effective in preventing aids in women. In the Fisher's exact test, we received a p-value of .000007686 which is less than 0.05, there we reject the null hypothesis. The odds show that women who receive the treatment are 1.54 times more than likely to contract aids, not prevent it.
